--- a/TurmaOnline/src/java/i18n_en.properties
+++ b/TurmaOnline/src/java/i18n_en.properties
@@ -1,6 +1,6 @@
 # Aplica\u00e7\u00e3o
-application.name=Entities Blank
-application.version=1.0
+application.name=Turma Online
+application.version=
 application.copyRight=Powered by Entities Framework
 application.contact=entitiesframework@gmail.com
 
